--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Libraries\Combinatorics\Variations.cs" />
     <Compile Include="ButlerCoroutines\Combat.cs" />
     <Compile Include="Libraries\EnumHelper.cs" />
+    <Compile Include="Libraries\GarrMissionRewardExtension.cs" />
     <Compile Include="Libraries\ItemsExtensions.cs" />
     <Compile Include="Libraries\JSON\JSON.cs" />
     <Compile Include="Libraries\PlayerExtensions.cs" />
