First commit of new action system

--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -38,7 +38,47 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="API\ButlerLua.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Atom.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\CraftItem.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\Mill.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\PreCraftOperation.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\Stack.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\CleanMissions.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\DisenchantItems.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\MoveToObject.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\UseGarrisonHearthstoneIfNeeded.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\UseItem.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\CraftAllDailies.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\InteractWithMailbox.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\CraftDraenicMortarAtNpc.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\InteractWithOrderNpc.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\GetMails.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\PickUpOrderGarden.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\PickUpOrderMine.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\StartOrdersGarden.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\UseGearTokens.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\UseMiningPick.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\UseMinerCoffee.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\MillBeforeOrder.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\PickUpWorkOrders.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\StartOrdersMine.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\RefreshOrderReagents.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\StartMissions.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\StartWorkOrders.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\HarvestShipment.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\StartShipment.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\HarvestObject.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\HarvestObjectCached.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\MoveTo.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\MoveToInteract.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\OpenAllContainers.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\TurnInMissions.cs" />
     <Compile Include="ButlerCoroutines\Enchanting.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\CleanGarden.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\CleanMine.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\OpenSalvageCrates.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Sequencer.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\StalkerEngine.cs" />
     <Compile Include="Config\OldSettings\DailyProfession.cs" />
     <Compile Include="Config\OldSettings\GaBSettings.Building.cs" />
     <Compile Include="Config\OldSettings\GabSettings.cs" />
@@ -55,6 +95,7 @@
     <Compile Include="Libraries\EnumHelper.cs" />
     <Compile Include="Libraries\ItemsExtensions.cs" />
     <Compile Include="Libraries\JSON\JSON.cs" />
+    <Compile Include="Libraries\SpellExtension.cs" />
     <Compile Include="Libraries\PlayerExtensions.cs" />
     <Compile Include="Libraries\Salesman.cs" />
     <Compile Include="Libraries\Wowhead\FollowerInfo.cs" />
