Added fix for mob not looted in mine and herb garden Added fix for coffe and pick not used until end of mine run since last update to core engine Added fix for most of "bot stopping with no reasons from time to time" Added fix for selling junk doing nothing Huge improvement in overall stability and debug outputs

--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -41,6 +41,7 @@
     <Compile Include="ButlerCoroutines\AtomsLibrary\Atom.cs" />
     <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\CraftItem.cs" />
     <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\Mill.cs" />
+    <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\MoveToShipment.cs" />
     <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\PreCraftOperation.cs" />
     <Compile Include="ButlerCoroutines\AtomsLibrary\Atoms\Stack.cs" />
     <Compile Include="ButlerCoroutines\AtomsLibrary\Garrison\Meta\ActivateBuildings.cs" />
